--- a/Visualisierung/TMvisual.tex
+++ b/Visualisierung/TMvisual.tex
@@ -25,7 +25,7 @@
 \begin{frame}[fragile]{CoMa Turingmaschine} 
  
  \begin{itemize} 
- \item Eingabealphabet : ['26', '1'] 
+ \item Eingabealphabet : ['11'] 
  \item Bandalphabet : [1, 2, 3] 
  \item Leerzeichen : B 
  \item anzahl an Zustaenden : 2 
@@ -43,8 +43,8 @@
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
- \node [on chain=1,tmtape] {11}; 
- \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {21}; 
+ \node [on chain=1,tmtape] {78}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
@@ -62,7 +62,7 @@
  \begin{scope}[start chain=2 going right] 
  \node [draw,left=3cm,arrow box,name=p,on chain=2,arrow box arrows={north:.5cm},minimum size=0.5cm] {}; 
  \draw[on chain=2]{}; 
- \node [draw, name=q,left=0cm,on chain=2]{q1}; 
+ \node [draw, name=q,left=0cm,on chain=2]{q3}; 
  \draw [<-] (p) -- (q); 
  \chainin (q) [join]; 
  \end{scope} 
@@ -72,7 +72,7 @@
 \begin{frame}[fragile]{CoMa Turingmaschine} 
  
  \begin{itemize} 
- \item Eingabealphabet : ['26'] 
+ \item Eingabealphabet : ['11'] 
  \item Bandalphabet : [1, 2, 3] 
  \item Leerzeichen : B 
  \item anzahl an Zustaenden : 2 
@@ -89,9 +89,9 @@
  \node [on chain=1,tmtape,draw=none] {$\ldots$}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {26}; 
- \node [on chain=1,tmtape] {B}; 
- \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {78}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
@@ -119,7 +119,7 @@
 \begin{frame}[fragile]{CoMa Turingmaschine} 
  
  \begin{itemize} 
- \item Eingabealphabet : ['26', '1'] 
+ \item Eingabealphabet : ['11'] 
  \item Bandalphabet : [1, 2, 3] 
  \item Leerzeichen : B 
  \item anzahl an Zustaenden : 2 
@@ -136,10 +136,10 @@
  \node [on chain=1,tmtape,draw=none] {$\ldots$}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
- \node [on chain=1,tmtape] {26}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {1}; 
- \node [on chain=1,tmtape] {B}; 
- \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {78}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
@@ -157,6 +157,53 @@
  \node [draw,left=3cm,arrow box,name=p,on chain=2,arrow box arrows={north:.5cm},minimum size=0.5cm] {}; 
  \draw[on chain=2]{}; 
  \node [draw, name=q,left=0cm,on chain=2]{q1}; 
+ \draw [<-] (p) -- (q); 
+ \chainin (q) [join]; 
+ \end{scope} 
+ \end{tikzpicture} 
+ \end{figure} 	
+ \end{frame} 
+\begin{frame}[fragile]{CoMa Turingmaschine} 
+ 
+ \begin{itemize} 
+ \item Eingabealphabet : ['11'] 
+ \item Bandalphabet : [1, 2, 3] 
+ \item Leerzeichen : B 
+ \item anzahl an Zustaenden : 2 
+ \item akzept. Zustaende : q1,q2
+ \end{itemize} 
+ \begin{figure} 
+ \begin{tikzpicture} 
+ 
+ \edef\sizetape{0.7cm} 
+ \tikzstyle{tmtape}=[draw,minimum size=\sizetape] 
+ 
+ %% Draw TM tape 
+ \begin{scope}[start chain=1 going right,node distance=-0.15mm] 
+ \node [on chain=1,tmtape,draw=none] {$\ldots$}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {wtf}; 
+ \node [on chain=1,tmtape] {1}; 
+ \node [on chain=1,tmtape] {78}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+  
+ \node [on chain=1,tmtape,draw=none] {$\ldots$}; 
+ \end{scope} 
+ \end{tikzpicture} 
+ \begin{tikzpicture} 
+ \node [draw,align=left]{akt. Zustand}; 
+ \begin{scope}[start chain=2 going right] 
+ \node [draw,left=3cm,arrow box,name=p,on chain=2,arrow box arrows={north:.5cm},minimum size=0.5cm] {}; 
+ \draw[on chain=2]{}; 
+ \node [draw, name=q,left=0cm,on chain=2]{q3}; 
  \draw [<-] (p) -- (q); 
  \chainin (q) [join]; 
  \end{scope} 
