--- a/Visualisierung/TMvisual.tex
+++ b/Visualisierung/TMvisual.tex
@@ -185,13 +185,107 @@
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
- \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {wtf}; 
  \node [on chain=1,tmtape] {1}; 
  \node [on chain=1,tmtape] {78}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+  
+ \node [on chain=1,tmtape,draw=none] {$\ldots$}; 
+ \end{scope} 
+ \end{tikzpicture} 
+ \begin{tikzpicture} 
+ \node [draw,align=left]{akt. Zustand}; 
+ \begin{scope}[start chain=2 going right] 
+ \node [draw,left=3cm,arrow box,name=p,on chain=2,arrow box arrows={north:.5cm},minimum size=0.5cm] {}; 
+ \draw[on chain=2]{}; 
+ \node [draw, name=q,left=0cm,on chain=2]{q3}; 
+ \draw [<-] (p) -- (q); 
+ \chainin (q) [join]; 
+ \end{scope} 
+ \end{tikzpicture} 
+ \end{figure} 	
+ \end{frame} 
+\begin{frame}[fragile]{CoMa Turingmaschine} 
+ 
+ \begin{itemize} 
+ \item Eingabealphabet : ['11'] 
+ \item Bandalphabet : [1, 2, 3] 
+ \item Leerzeichen : B 
+ \item anzahl an Zustaenden : 2 
+ \item akzept. Zustaende : q1,q2
+ \end{itemize} 
+ \begin{figure} 
+ \begin{tikzpicture} 
+ 
+ \edef\sizetape{0.7cm} 
+ \tikzstyle{tmtape}=[draw,minimum size=\sizetape] 
+ 
+ %% Draw TM tape 
+ \begin{scope}[start chain=1 going right,node distance=-0.15mm] 
+ \node [on chain=1,tmtape,draw=none] {$\ldots$}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {1}; 
+ \node [on chain=1,tmtape] {wtf}; 
+ \node [on chain=1,tmtape] {1}; 
+ \node [on chain=1,tmtape] {78}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+  
+ \node [on chain=1,tmtape,draw=none] {$\ldots$}; 
+ \end{scope} 
+ \end{tikzpicture} 
+ \begin{tikzpicture} 
+ \node [draw,align=left]{akt. Zustand}; 
+ \begin{scope}[start chain=2 going right] 
+ \node [draw,left=3cm,arrow box,name=p,on chain=2,arrow box arrows={north:.5cm},minimum size=0.5cm] {}; 
+ \draw[on chain=2]{}; 
+ \node [draw, name=q,left=0cm,on chain=2]{q1}; 
+ \draw [<-] (p) -- (q); 
+ \chainin (q) [join]; 
+ \end{scope} 
+ \end{tikzpicture} 
+ \end{figure} 	
+ \end{frame} 
+\begin{frame}[fragile]{CoMa Turingmaschine} 
+ 
+ \begin{itemize} 
+ \item Eingabealphabet : ['11'] 
+ \item Bandalphabet : [1, 2, 3] 
+ \item Leerzeichen : B 
+ \item anzahl an Zustaenden : 2 
+ \item akzept. Zustaende : q1,q2
+ \end{itemize} 
+ \begin{figure} 
+ \begin{tikzpicture} 
+ 
+ \edef\sizetape{0.7cm} 
+ \tikzstyle{tmtape}=[draw,minimum size=\sizetape] 
+ 
+ %% Draw TM tape 
+ \begin{scope}[start chain=1 going right,node distance=-0.15mm] 
+ \node [on chain=1,tmtape,draw=none] {$\ldots$}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {B}; 
+ \node [on chain=1,tmtape] {wtf}; 
+ \node [on chain=1,tmtape] {1}; 
+ \node [on chain=1,tmtape] {wtf}; 
+ \node [on chain=1,tmtape] {1}; 
+ \node [on chain=1,tmtape] {78}; 
  \node [on chain=1,tmtape] {B}; 
  \node [on chain=1,tmtape] {B}; 
   
